--- a/index.html
+++ b/index.html
@@ -18,14 +18,36 @@
                 <div class = "banner_text">
                     <div class = "banner_header"> Dang 777McK777! Sweet Site!</div>
                     <div class = "banner_body"> Don't look now but this banner is pretty sick. I mean honestly, can you believe
-                                            how dope this banner actually is? You should really 
-                                            give some props on the GitHub (hint: press the button below to find it')'</div>
+                                                how dope this banner actually is? You should really 
+                                                give some props on the GitHub (hint: press the button below to find it')'</div>
+                    <button>GitHub</button>
                 </div>
-                        <div class = "banner_image"> 
+                <div class = "banner_image"> 
                             <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel = "noopener noreferrer">
                             <img src = "./images/pexels-william-woods-1466584-2864509.jpg" alt = "suit with a lapel pin of an enamel M" 
                              style = "max-width: 100vh; max-height: 100vh;"> </a>
-                        </div>
+                </div>
+            </div>
+       </div>
+       <div class = "center">
+            <div class = "center_header"> 777McK777 Is Getting Better At This </div>
+            <div class = "center_content">
+                <div class = "content">
+                    <div class = "content_image"> </div>
+                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
+                </div>
+                <div class = "content">
+                    <div class = "content_image"> </div>
+                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
+                </div>
+                <div class = "content">
+                    <div class = "content_image"> </div>
+                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
+                </div>
+                <div class = "content">
+                    <div class = "content_image"> </div>
+                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
+                </div>
             </div>
        </div>
     </head>
