Major additions to landing-page index/ styles Add center content section to index/ styles Squash major styles bugs messing with flexbox sizing in Center Add Quote, Call to Action and Footer section in index.

--- a/index.html
+++ b/index.html
@@ -31,25 +31,41 @@
        </div>
        <div class = "center">
             <div class = "center_header"> 777McK777 Is Getting Better At This </div>
-            <div class = "center_content">
-                <div class = "content">
-                    <div class = "content_image"> </div>
-                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
-                </div>
-                <div class = "content">
-                    <div class = "content_image"> </div>
-                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
-                </div>
-                <div class = "content">
-                    <div class = "content_image"> </div>
-                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
-                </div>
-                <div class = "content">
-                    <div class = "content_image"> </div>
-                    <div class = "content_text"> When in doubt you really just cannot forget to poopoo, peepee, and caca</div>
+                <div class = "center_content">
+                    <div class = "content">
+                        <div class = "content_image"> </div>
+                        <div class = "content_text"> When in doubt you really just cannot forget</div>
+                    </div>
+                    <div class = "content">
+                        <div class = "content_image"> </div>
+                        <div class = "content_text"> When in doubt you really just cannot forget</div>
+                    </div>
+                    <div class = "content">
+                        <div class = "content_image"> </div>
+                        <div class = "content_text"> When in doubt you really just cannot forget</div>
+                    </div>
+                    <div class = "content">
+                        <div class = "content_image"> </div>
+                        <div class = "content_text"> When in doubt you really just cannot forget</div>
+                    </div>
                 </div>
             </div>
        </div>
+       <div class = "quote_land">
+            <div class = "quote"> I was going to do a cool quote, then honestly thought I would do something like the
+                                lyrics from "Drop It Like It's Hot" but just ended up really not super digging any of that,
+                                just felt a little cliche. So I figured you know what? Let's just ramble for awhile I think.
+                                I want it to be a good block of text and look really sweet on the page. This ought to do it.
+            </div>
+            <div class = "author"> 777McK777 </div>
+       </div>
+       <div class = "call_action">
+            <div class = "why">
+                <div class = "why_header"> No Time Like The Present </div>
+                <div class = "why_body"> Well I mean think about it. You're literally reading this. So why not? </div>
+            </div>
+       </div>
+       <div class = "footer"> Copyright Non-Existent Circa 2024 (Barely)</div>
     </head>
 
 </html>
