--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang = "en">
     <head> 
         <meta charset = "UTF-8" name = "viewport" content = "width = device-width, initial-scale = 1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel = "stylesheet" href = "./css/styles.css">
         <title>777McK777 Landing Page</title>
+    </head>
+    <body>
        <div class = "header_banner"> 
             <div class = "header"> 
                 <div class = "header_text"> 777McK777 Odin-Landing-Page</div>
@@ -57,7 +62,7 @@
                                 just felt a little cliche. So I figured you know what? Let's just ramble for awhile I think.
                                 I want it to be a good block of text and look really sweet on the page. This ought to do it.
             </div>
-            <div class = "author"> 777McK777 </div>
+            <div class = "author"> -777McK777 </div>
        </div>
        <div class = "call_action">
             <div class = "why">
@@ -66,6 +71,5 @@
             </div>
        </div>
        <div class = "footer"> Copyright Non-Existent Circa 2024 (Barely)</div>
-    </head>
-
+    </body>
 </html>
