Add CSS styling to Call to Action/Footer Add all of the CSS styling to Call To Action section. Add all of the CSS styling to the footer section. Fix sizing issues with the center.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@
             <div class = "author"> -777McK777 </div>
        </div>
        <div class = "call_action">
-            <div class = "why">
-                <div class = "why_header"> No Time Like The Present </div>
-                <div class = "why_body"> Well I mean think about it. You're literally reading this. So why not? </div>
+            <div class = "blue_box">
+                <div class = "why">
+                    <div class = "why_header"> No Time Like The Present </div>
+                    <div class = "why_body"> Well I mean think about it. You're literally reading this. So why not? </div>
+                </div>
+                <div class = "why_button">
+                   <a href = "https://www.youtube.com/watch?v=ZZ5LpwO-An4" rel = "noopener noreferrer"> <button> Sign UP!!!</button> </a>
+                </div>
             </div>
        </div>
        <div class = "footer"> Copyright Non-Existent Circa 2024 (Barely)</div>
