Finalize The Project. Upload To Github Fix the bugs with the jpg being dumb Add the last of the links to the header. Be joyous it is finished.

--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
         <title>777McK777 Landing Page</title>
     </head>
     <body>
-       <div class = "header_banner"> 
-            <div class = "header"> 
-                <div class = "header_text"> 777McK777 Odin-Landing-Page</div>
-                    <div class = "header_links">
-                        <div>Link to cool shi...</div>
-                        <div>Bro you gotta check this:</div>
-                        <div>DayUm BrIO Lo0KiE HEre</div>
-                    </div>
-                </div>
+            <div class = "header_banner"> 
+                    <div class = "header"> 
+                        <div class = "header_text"> 777McK777 Odin-Landing-Page</div>
+                            <div class = "header_links">
+                                <div><a href = "https://777mck777.github.io/odin-recipes/" rel = "noopener noreferrer" >Link to cool shi...</a></div>
+                                <div><a href = "https://777mck777.github.io/odin-recipes/" rel = "noopener noreferrer" >Bro you gotta check this:</a></div>
+                                <div><a href = "https://777mck777.github.io/odin-recipes/" rel = "noopener noreferrer" >DayUm BrIO Lo0KiE HEre</a></div>
+                            </div>
+                        </div>
             </div>
             <div class = "banner"> 
                 <div class = "banner_text">
                     <div class = "banner_header"> Dang 777McK777! Sweet Site!</div>
-                    <div class = "banner_body"> Don't look now but this banner is pretty sick. I mean honestly, can you believe
-                                                how dope this banner actually is? You should really 
-                                                give some props on the GitHub (hint: press the button below to find it')'</div>
-                    <button>GitHub</button>
+                    <div class = "banner_body"> 
+                        Don't look now but this banner is pretty sick. I mean honestly, can you believe
+                        how dope this banner actually is? You should really 
+                        give some props on the GitHub I'd really appreciate it (hint: press the button below to find it)
+                    </div>
+                   <div class = "banner_button" > 
+                        <a href = "https://github.com/McK777McK/odin-landing-page" rel = "noopener noreferrer" > 
+                            <button>GitHub</button> 
+                        </a> 
+                    </div>
                 </div>
                 <div class = "banner_image"> 
                             <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel = "noopener noreferrer">
-                            <img src = "./images/pexels-william-woods-1466584-2864509.jpg" alt = "suit with a lapel pin of an enamel M" 
-                             style = "max-width: 100vh; max-height: 100vh;"> </a>
+                            <img src = "./images/pexels-william-woods-1466584-2864509.jpg" alt = "suit with a lapel pin of an enamel M">
+                             </a>
                 </div>
             </div>
        </div>
